# finlit

./: .gitignore  README.md  docker-compose.yaml  engage.toml  flake.nix  pyproject.toml
grafana-dashboards/: monthly-expenses.json
jupyter/: basic_fire.ipynb
src/finlit/: Monthly_Dashboard.py  Monthly_Expenses.py  __init__.py  __main__.py  _main.py  caching.py  constants.py  py.typed  utils.py  widgets.py
src/finlit/data/: __init__.py  engine.py  ledger.py
src/finlit/data/datasets/: __init__.py  all_expenses.py  all_income.py  balance_sheet.py  dataset.py  network_projection.py  networth_history.py  networth_projection.py
src/finlit/data/transformations/: __init__.py  all_expenses_period.py  all_income_period.py  calculate.py  commodities_alloc.py  expenses_categorized.py  expenses_historic_ratios.py  expenses_showcase.py  networth_history.py  networth_projections.py  portfolio_assets.py
src/finlit/datasets/: __init__.py  network_projection.py
src/finlit/pages/: FIRE_Progress.py  Porfolio.py  Portfolio.py  monthly.py
src/finlit/reports/: monthly.py
src/finlit/viz/fire_progress/: __init__.py  indicators.py  networth_chart.py
src/finlit/viz/monthly_expenses/: __init__.py  expenses_bar_chart.py  expenses_historic_cat_chart.py  gauge_expense_chart.py
src/finlit/viz/portfolio/: holdings_piechart.py  networth_chart.py
src/pgloader/: __main__.py  _main.py  engine.py  ledger.py  utils.py
src/pgloader/tables/: __init__.py  all_bank_postings.py  all_expenses.py  all_income.py  all_postings.py  base_table.py  network_trajectory.py
tests/: __init__.py
